--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uniswap/liquidity-staker",
   "version": "1.0.2",
-  "author": "Noah Zinsmeister",
+  "author": "Uniswap Team",
   "repository": {
     "type": "git",
     "url": "https://github.com/Uniswap/liquidity-staker"
@@ -35,6 +35,10 @@
     "rimraf": "^3.0.2",
     "solc": "0.5.16",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.0.0",
+    "ethers": "^5.0.0",
+    "hardhat": "^2.0.2"
   }
 }
